add test for enabling